--- a/my-app/src/components/styles/App.css
+++ b/my-app/src/components/styles/App.css
@@ -31,6 +31,12 @@ body {
     gap: 15px;
 }
 
+.list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px
+}
+
 .post {
     padding: 10px;
     background: white;
@@ -50,6 +56,10 @@ body {
 
 .primaryText {
     font-weight: 600;
+}
+
+.postTitle {
+    text-align: center;
 }
 
 .secondaryText {
