Refresh app's design

--- a/my-app/src/components/UI/button/MyButton.module.css
+++ b/my-app/src/components/UI/button/MyButton.module.css
@@ -1,20 +1,19 @@
 .myBtn {
     text-transform: uppercase;
     font-size: 12px;
-    color: rgba(0, 57, 92, 0.8);
-    background: rgba(0, 66, 105, 0.07);
-    border-radius: 4px; 
+    color: white;
     padding: 10px 20px;
     text-align: center;
     cursor: pointer;
 }
 
 .textBtn {
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .myBtn:hover {
-    opacity: 0.8;
+    background: rgba(52,58,70,.8);
+    border-radius: 15px;
 }
 
 .myBtn:disabled {
