--- a/my-app/src/components/UI/input/MyInput.module.css
+++ b/my-app/src/components/UI/input/MyInput.module.css
@@ -1,8 +1,10 @@
 .myInpt {
     width: 100%;
     font-size: 12px;
-    background: rgba(0, 66, 105, 0.07);
-    border-radius: 4px; 
+    background: rgba(52,58,70,.8);
+    border: 1.5px solid #23272f;
+    color: white;
+    border-radius: 40px; 
     padding: 10px 20px;
     text-align: center;
     cursor: pointer;
@@ -10,4 +12,5 @@
 
 .myInpt:focus {
     opacity: 0.7;
+    outline: 2px solid #149eca;
 }
