--- a/my-app/src/components/UI/select/MySelect.module.css
+++ b/my-app/src/components/UI/select/MySelect.module.css
@@ -1,8 +1,7 @@
 .MySlct {
     text-transform: uppercase;
     font-size: 12px;
-    color: rgba(0, 57, 92, 0.8);
-    background: rgba(0, 66, 105, 0.07);
+    color: white;
     border-radius: 4px; 
     padding: 10px 20px;
     text-align: center;
@@ -10,9 +9,10 @@
 }
 
 .MySlct:hover {
-    opacity: 0.7;
+    background: rgba(52,58,70,.8);
+    border-radius: 15px;
 }
 
 .textSlct {
-    font-weight: 600;
+    font-weight: 500;
 }
