--- a/my-app/src/components/styles/App.css
+++ b/my-app/src/components/styles/App.css
@@ -12,17 +12,17 @@ body {
 }
 
 body {
-    background: rgba(236, 241, 244, 0.5);
+    background: #23272f;
     display: flex;
     flex-direction: column;
-    font-family: "Inter", sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-weight: 400;
     font-size: 20px;
     color: var(--color-black);
 }
 
 #root {
-    padding: 10px 20px 40px 20px;
+    padding: 40px 250px;
 }
 
 .app {
@@ -43,10 +43,10 @@ body {
 }
 
 .post {
-    padding: 10px;
-    background: white;
-    border-top: 4px solid rgba(0, 66, 105, 0.1);
-    border-radius: 4px;
+    padding: 20px;
+    background: #16181d;
+    box-shadow: 4px 4px 90px 0px rgba(34, 37, 39, 0.83);
+    border-radius: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -61,23 +61,32 @@ body {
 
 .primaryText {
     font-weight: 600;
+    color: #149eca;
 }
 
 .postTitle {
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
+    color: white
+}
+
+.maxPostText {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .secondaryText {
-    font-weight: 400;
+    font-weight: 300;
     font-size: 15px;
+    color: white;
 }
 
 .button-text {
     text-transform: uppercase;
     font-size: 12px;
     color: rgba(0, 57, 92, 0.8);
-
 }
 
 .delete-button {
@@ -91,4 +100,9 @@ body {
 
 .delete-button:hover{
     opacity: 0.8;
+}
+
+.menu_search {
+    display: flex;
+    gap: 10px;
 }
