Making modal window createPost

--- a/my-app/src/components/styles/App.css
+++ b/my-app/src/components/styles/App.css
@@ -33,7 +33,9 @@ body {
 
 .formMain {
     display: flex;
-    gap: 10px
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
 }
 
 .list {
