--- a/my-app/src/components/styles/App.css
+++ b/my-app/src/components/styles/App.css
@@ -47,12 +47,29 @@ body {
 .post {
     padding: 20px;
     background: #16181d;
-    box-shadow: 4px 4px 90px 0px rgba(34, 37, 39, 0.83);
     border-radius: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 10px;
+}
+
+.post-enter {
+    transform: translateX(-350px);
+  }
+
+.post-enter-active {
+    transform: translateX(0px);
+    transition: all 200ms ease-in;
+}
+
+.post-exit {
+    opacity: 1;
+}
+
+.post-exit-active {
+    transform: translateX(-350px);
+    transition: all 200ms ease-in;
 }
 
 .post__content {
@@ -100,6 +117,10 @@ body {
     cursor: pointer;
 }
 
+.myBtnDelete {
+    background-color: #dc3545;
+}
+
 .delete-button:hover{
     opacity: 0.8;
 }
@@ -107,4 +128,14 @@ body {
 .menu_search {
     display: flex;
     gap: 10px;
+}
+
+.deleteBtn {
+    display: flex;
+    color: white;
+
+    justify-content: center;
+    font-size: 22px;
+    align-items: center;
+    transform: rotate(45deg);
 }
