--- a/my-app/src/components/UI/button/MyButton.module.css
+++ b/my-app/src/components/UI/button/MyButton.module.css
@@ -1,23 +1,29 @@
-.myBtn {
-    text-transform: uppercase;
-    font-size: 12px;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    cursor: pointer;
-    max-width: 100px;
 
+.myBtn:disabled {
+  /* opacity: 0.6; */
+  /* background: rgba(52,58,70,.8); */
+  background: #bb2d3b;
 }
 
-.textBtn {
-    font-weight: 500;
+.myBtn {
+  text-transform: uppercase;
+  background: #3a7999;
+  color: #f2f2f2;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  max-width: 140px;
+  text-align: center;
+  cursor: pointer;
+  position: relative;
+  box-sizing: border-box;
+  transition: all 250ms ease;
 }
 
 .myBtn:hover {
-    background: rgba(52,58,70,.8);
-    border-radius: 15px;
-}
-
-.myBtn:disabled {
-    opacity: 0.6;
+  background: rgba(0, 0, 0, 0);
+  color: #3a7999;
+  box-shadow: inset 0 0 0 3px #3a7999;
 }
