--- a/my-app/src/components/styles/App.css
+++ b/my-app/src/components/styles/App.css
@@ -13,6 +13,9 @@ body {
 
 body {
     background: #23272f;
+    background-image: url("https://blog.1a23.com/wp-content/uploads/sites/2/2020/02/pattern-32.svg");
+    background-repeat: repeat;
+    background-position: center;
     display: flex;
     flex-direction: column;
     font-family: 'Inter', Arial, sans-serif;
@@ -80,13 +83,13 @@ body {
 
 .primaryText {
     font-weight: 600;
-    color: #149eca;
+    color: #3a7999;
 }
 
 .postTitle {
     text-align: center;
     font-size: 20px;
-    color: white
+    color: #f2f2f2;
 }
 
 .maxPostText {
@@ -99,7 +102,7 @@ body {
 .secondaryText {
     font-weight: 300;
     font-size: 15px;
-    color: white;
+    color: #f2f2f2;
 }
 
 .button-text {
@@ -132,8 +135,7 @@ body {
 
 .deleteBtn {
     display: flex;
-    color: white;
-
+    color: #f2f2f2;
     justify-content: center;
     font-size: 22px;
     align-items: center;
