--- a/my-app/src/components/UI/button/MyButton.module.css
+++ b/my-app/src/components/UI/button/MyButton.module.css
@@ -1,20 +1,13 @@
-
-.myBtn:disabled {
-  /* opacity: 0.6; */
-  /* background: rgba(52,58,70,.8); */
-  background: #bb2d3b;
-}
-
 .myBtn {
-  text-transform: uppercase;
-  background: #3a7999;
-  color: #f2f2f2;
-  font-size: 12px;
-  font-weight: 500;
   padding: 10px 20px;
+  max-width: 140px;
   border: none;
   border-radius: 10px;
-  max-width: 140px;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+  background: var(--main-blue-color);
+  color: var(--white-color);
   text-align: center;
   cursor: pointer;
   position: relative;
@@ -23,7 +16,7 @@
 }
 
 .myBtn:hover {
-  background: rgba(0, 0, 0, 0);
-  color: #3a7999;
-  box-shadow: inset 0 0 0 3px #3a7999;
+  background: var(--dark-gray-color);
+  color: var(--main-blue-color);
+  box-shadow: inset 0 0 0 3px var(--main-blue-color);
 }
