--- a/my-app/src/components/UI/button/delete/DeleteButton.module.css
+++ b/my-app/src/components/UI/button/delete/DeleteButton.module.css
@@ -1,54 +1,23 @@
-/* .myBtn {
-    text-transform: uppercase;
-    color: white;
-    text-align: center;
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    background: rgba(52,58,70,.8);
-    border-radius: 12px;
+.dltBtn {
+  padding: 10px 20px;
+  max-width: 140px;
+  border: none;
+  border-radius: 10px;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+  background:  var(--gray-color);
+  color: var(--white-color);
+  text-align: center;
+  cursor: pointer;
+  position: relative;
+  box-sizing: border-box;
+  transition: all 250ms ease;
 }
 
-.myBtn:hover {
-    background: #bb2d3b;
+.dltBtn:hover {
+  background: var(--dark-gray-color);
+  color: var(--red-color);
+  box-shadow: inset 0 0 0 3px var(--red-color);
 }
-
-.myBtn:disabled {
-    opacity: 0.6;
-} */
-
-
-
-
-
-.myBtn:disabled {
-    /* opacity: 0.6; */
-    /* background: rgba(52,58,70,.8); */
-    background: #bb2d3b;
-  }
-  
-  .myBtn {
-    text-transform: uppercase;
-    /* background: #3a7999; */
-    background: rgba(52,58,70);
-    
-    color: #f2f2f2;
-    font-size: 12px;
-    font-weight: 500;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 10px;
-    max-width: 140px;
-    text-align: center;
-    cursor: pointer;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 250ms ease;
-  }
-  
-  .myBtn:hover {
-    background: rgba(0, 0, 0, 0);
-    color: #bb2d3b;
-    box-shadow: inset 0 0 0 3px #bb2d3b;
-  }
   
