--- a/my-app/src/components/UI/errorMessage/ErrorMessage.module.css
+++ b/my-app/src/components/UI/errorMessage/ErrorMessage.module.css
@@ -1,23 +1,21 @@
 .errorMessage {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
   position: absolute;
   top: 50%;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
 }
 
 .errorText {
-  color: #3a7999;
-  /* color: #f2f2f2; */
+  padding: 10px 20px;
+  border-radius: 10px; 
+  background: var(--gray-color);
+  color: var(--main-blue-color);
   font-weight: 600;
   line-height: 20px;
-  background: rgba(52, 58, 70);
-  /* background: #f2f2f2; */
-  border-radius: 10px; 
-  padding: 10px 20px;
   text-align: center;
 }
 
@@ -40,6 +38,7 @@
   position: relative;
   box-sizing: border-box;
 }
+
 .loader::before {
   content: "";
   left: 60px;
@@ -67,6 +66,7 @@
   box-sizing: border-box;
   animation: rotationBack 3s linear infinite;
 }
+
 .loader::after {
   content: "";
   left: 94px;
