--- a/my-app/src/components/UI/loader/Loader.module.css
+++ b/my-app/src/components/UI/loader/Loader.module.css
@@ -1,48 +1,72 @@
-.loader {
-    display: inline-block;
-    position: relative;
-    width: 100px;
-    height: 100px;
-  }
-  .loader div {
+   .loader {
+    height: 5px;
+    width: 1px;
     position: absolute;
-    border: 4px solid #149eca;
-    opacity: 1;
+    animation: rotate0234 3.5s linear infinite;
+  }
+  
+  .loader .dot {
+    top: 30px;
+    height: 7px;
+    width: 7px;
+    background: #149eca;
     border-radius: 50%;
-    animation: loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+    position: relative;
   }
-  .loader div:nth-child(2) {
-    animation-delay: -0.5s;
+  
+  .text {
+    position: absolute;
+    bottom: -85px;
+    font-size: 25px;
+    font-weight: 400;
+    color: #149eca;
   }
-  @keyframes loader {
-    0% {
-      top: 36px;
-      left: 36px;
-      width: 0;
-      height: 0;
-      opacity: 0;
+  
+  @keyframes rotate0234 {
+    30% {
+      transform: rotate(220deg);
     }
-    4.9% {
-      top: 36px;
-      left: 36px;
-      width: 0;
-      height: 0;
-      opacity: 0;
-    }
-    5% {
-      top: 36px;
-      left: 36px;
-      width: 0;
-      height: 0;
+  
+    40% {
+      transform: rotate(450deg);
       opacity: 1;
     }
-    100% {
-      top: 0px;
-      left: 0px;
-      width: 72px;
-      height: 72px;
+  
+    75% {
+      transform: rotate(720deg);
+      opacity: 1;
+    }
+  
+    76% {
       opacity: 0;
+    }
+  
+    100% {
+      opacity: 0;
+      transform: rotate(0deg);
     }
   }
   
+  .loader:nth-child(1) {
+    animation-delay: 0.15s;
+  }
   
+  .loader:nth-child(2) {
+    animation-delay: 0.3s;
+  }
+  
+  .loader:nth-child(3) {
+    animation-delay: 0.45s;
+  }
+  
+  .loader:nth-child(4) {
+    animation-delay: 0.6s;
+  }
+  
+  .loader:nth-child(5) {
+    animation-delay: 0.75s;
+  }
+  
+  .loader:nth-child(6) {
+    animation-delay: 0.9s;
+  }
