--- a/my-app/src/components/UI/select/MySelect.module.css
+++ b/my-app/src/components/UI/select/MySelect.module.css
@@ -1,18 +1,23 @@
 .MySlct {
-    text-transform: uppercase;
-    font-size: 12px;
-    color: white;
-    border-radius: 4px; 
-    padding: 10px 20px;
-    text-align: center;
-    cursor: pointer;
+  padding: 10px 20px;
+  max-width: 140px;
+  border: none;
+  border-radius: 10px;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+  background: var(--main-blue-color);
+  color: var(--white-color);
+  text-align: center;
+  cursor: pointer;
+  position: relative;
+  box-sizing: border-box;
+  transition: all 250ms ease;
 }
-
+  
 .MySlct:hover {
-    background: rgba(52,58,70,.8);
-    border-radius: 15px;
+   background: var(--dark-gray-color);
+   color: var(--main-blue-color);
+   box-shadow: inset 0 0 0 3px var(--main-blue-color);
 }
-
-.textSlct {
-    font-weight: 500;
-}
+  
