--- a/my-app/src/components/styles/App.css
+++ b/my-app/src/components/styles/App.css
@@ -6,13 +6,24 @@
     list-style: none;
 }
 
+:root {
+    --main-bg-color:#23272f;
+    --main-blue-color: #3a7999;
+    --dark-gray-color: rgba(0, 0, 0, 0);
+    --dark-gray-alfa20-color: rgba(0,0,0,0.2);
+    --black-color: #16181d;
+    --gray-color: rgba(52,58,70); 
+    --red-color: #bb2d3b;
+    --white-color: #f2f2f2;
+}
+
 html,
 body {
   height: 100%;
 }
 
 body {
-    background: #23272f;
+    background: var(--main-bg-color);
     background-image: url("https://blog.1a23.com/wp-content/uploads/sites/2/2020/02/pattern-32.svg");
     background-repeat: repeat;
     background-position: center;
@@ -21,7 +32,6 @@ body {
     font-family: 'Inter', Arial, sans-serif;
     font-weight: 400;
     font-size: 20px;
-    color: var(--color-black);
 }
 
 #root {
@@ -34,11 +44,27 @@ body {
     gap: 15px;
 }
 
+.primaryText {
+    font-weight: 600;
+    color: var(--main-blue-color);
+}
+
+.secondaryText {
+    font-weight: 300;
+    font-size: 15px;
+    color: var(--white-color);
+}
+
 .formMain {
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
+}
+
+.menu_search {
+    display: flex;
+    gap: 10px;
 }
 
 .list {
@@ -48,13 +74,13 @@ body {
 }
 
 .post {
-    padding: 20px;
-    background: #16181d;
-    border-radius: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 10px;
+    padding: 20px;
+    border-radius: 10px;
+    background: var(--black-color);
 }
 
 .post-enter {
@@ -81,15 +107,10 @@ body {
     gap: 10px;
 }
 
-.primaryText {
-    font-weight: 600;
-    color: #3a7999;
-}
-
 .postTitle {
     text-align: center;
     font-size: 20px;
-    color: #f2f2f2;
+    color: var(--white-color);
 }
 
 .maxPostText {
@@ -99,45 +120,43 @@ body {
     overflow: hidden;
 }
 
-.secondaryText {
-    font-weight: 300;
-    font-size: 15px;
-    color: #f2f2f2;
+.loaderContainer {
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
-.button-text {
+.pageNumber {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.page {
     text-transform: uppercase;
+    background: #3a7999;
+    color: #f2f2f2;
     font-size: 12px;
-    color: rgba(0, 57, 92, 0.8);
-}
-
-.delete-button {
-    background: rgba(0, 66, 105, 0.07);
-    border-radius: 4px; 
-    height: 30px;
-    width: 100px;
+    font-weight: 500;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    max-width: 140px;
     text-align: center;
     cursor: pointer;
+    position: relative;
+    box-sizing: border-box;
+    transition: all 250ms ease;
 }
 
-.myBtnDelete {
-    background-color: #dc3545;
+.page__current {
+    background: #dc3545;
 }
 
-.delete-button:hover{
-    opacity: 0.8;
-}
-
-.menu_search {
-    display: flex;
-    gap: 10px;
-}
-
-.deleteBtn {
-    display: flex;
-    color: #f2f2f2;
-    justify-content: center;
-    font-size: 22px;
-    align-items: center;
-    transform: rotate(45deg);
+.page:hover {
+  background: rgba(0, 0, 0, 0);
+  color: #3a7999;
+  box-shadow: inset 0 0 0 3px #3a7999;
 }
