--- a/my-app/src/components/styles/App.css
+++ b/my-app/src/components/styles/App.css
@@ -32,6 +32,7 @@ body {
     font-family: 'Inter', Arial, sans-serif;
     font-weight: 400;
     font-size: 20px;
+    color: var(--white-color)
 }
 
 #root {
@@ -138,6 +139,11 @@ body {
     left: 50%; 
     margin-right: -50%;
     transform: translate(-50%, -50%)
+}
+
+.loaderContainer2 {
+    display: flex;
+    justify-content: center;
 }
 
 .pageNumber {
