--- a/my-app/src/components/styles/App.css
+++ b/my-app/src/components/styles/App.css
@@ -178,3 +178,18 @@ body {
   color: #3a7999;
   box-shadow: inset 0 0 0 3px #3a7999;
 }
+
+.comments {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 20px;
+    border-radius: 10px;
+    background: var(--black-color);
+}
+
+.commentsText {
+    font-weight: 500;
+    font-size: 14px;
+    color: var(--main-blue-color);
+}
