--- a/my-app/src/components/UI/button/MyButton.module.css
+++ b/my-app/src/components/UI/button/MyButton.module.css
@@ -20,3 +20,9 @@
   color: var(--main-blue-color);
   box-shadow: inset 0 0 0 3px var(--main-blue-color);
 }
+
+.myBtn:disabled {
+  background: gray;
+  pointer-events: none;
+  cursor: pointer;
+}
