--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -1,240 +1,249 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 
 * {
-    all: unset;
-    display: revert;
-    list-style: none;
+	all: unset;
+	display: revert;
+	list-style: none;
 }
 
 :root {
-    --main-bg-color:#23272f;
-    --main-blue-color: #3a7999;
-    --dark-gray-color: rgba(0, 0, 0, 0);
-    --dark-gray-alfa20-color: rgba(0,0,0,0.2);
-    --black-color: #16181d;
-    --gray-color: rgba(52,58,70); 
-    --red-color: #bb2d3b;
-    --white-color: #f2f2f2;
+	--main-bg-color: #23272f;
+	--main-blue-color: #3a7999;
+	--dark-gray-color: rgba(0, 0, 0, 0);
+	--dark-gray-alfa20-color: rgba(0, 0, 0, 0.2);
+	--black-color: #16181d;
+	--gray-color: rgba(52, 58, 70);
+	--red-color: #bb2d3b;
+	--white-color: #f2f2f2;
 }
 
 html,
 body {
-  height: 100%;
+	height: 100%;
 }
 
 body {
-    background: var(--main-bg-color);
-    background-image: url("https://blog.1a23.com/wp-content/uploads/sites/2/2020/02/pattern-32.svg");
-    background-repeat: repeat;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    font-family: 'Inter', Arial, sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    color: var(--white-color)
+	background: var(--main-bg-color);
+	background-image: url("https://blog.1a23.com/wp-content/uploads/sites/2/2020/02/pattern-32.svg");
+	background-repeat: repeat;
+	background-position: center;
+	display: flex;
+	flex-direction: column;
+	font-family: "Inter", Arial, sans-serif;
+	font-weight: 400;
+	font-size: 20px;
+	color: var(--white-color);
 }
 
 #root {
-    padding: 40px 250px;
-    display: flex;
-    flex-direction: column;
+	padding: 40px 250px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .navbar_menu {
-    display: flex;
-    gap: 10px;
-    align-items: center;
+	display: flex;
+	gap: 10px;
+	align-items: center;
 }
 
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 30px;
+.navbar {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 30px;
 }
 
 .app {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
 }
 
 .primaryText {
-    font-weight: 600;
-    color: var(--main-blue-color);
+	font-weight: 600;
+	color: var(--main-blue-color);
 }
 
 .secondaryText {
-    font-weight: 300;
-    font-size: 15px;
-    color: var(--white-color);
+	font-weight: 300;
+	font-size: 15px;
+	color: var(--white-color);
 }
 
 .formMain {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    align-items: center;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	align-items: center;
 }
 
 .menu_search {
-    display: flex;
-    gap: 10px;
+	display: flex;
+	gap: 10px;
 }
 
 .list {
-    display: flex;
-    flex-direction: column;
-    gap: 10px
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
 .post {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-    padding: 20px;
-    border-radius: 10px;
-    background: var(--black-color);
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 10px;
+	padding: 20px;
+	border-radius: 10px;
+	background: var(--black-color);
 }
 
 .post-enter {
-    transform: translateX(-350px);
-  }
+	transform: translateX(-350px);
+}
 
 .post-enter-active {
-    transform: translateX(0px);
-    transition: all 200ms ease-in;
+	transform: translateX(0px);
+	transition: all 200ms ease-in;
 }
 
 .post-exit {
-    opacity: 1;
+	opacity: 1;
 }
 
 .post-exit-active {
-    transform: translateX(-350px);
-    transition: all 200ms ease-in;
+	transform: translateX(-350px);
+	transition: all 200ms ease-in;
 }
 
 .post__content {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
 .postTitle {
-    text-align: center;
-    font-size: 20px;
-    color: var(--white-color);
+	text-align: center;
+	font-size: 20px;
+	color: var(--white-color);
 }
 
 .maxPostText {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
 }
 
 .post__delete {
-    display: flex;
-    gap: 10px;
+	display: flex;
+	gap: 10px;
 }
 
 .loaderContainer {
-    position: absolute;
-    top: 50%; 
-    left: 50%; 
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
 }
 
 .loaderContainer2 {
-    display: flex;
-    justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 .pageNumber {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+	display: flex;
+	justify-content: center;
+	gap: 20px;
 }
 
 .page {
-    text-transform: uppercase;
-    background: #3a7999;
-    color: #f2f2f2;
-    font-size: 12px;
-    font-weight: 500;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 10px;
-    max-width: 140px;
-    text-align: center;
-    cursor: pointer;
-    position: relative;
-    box-sizing: border-box;
-    transition: all 250ms ease;
+	text-transform: uppercase;
+	background: #3a7999;
+	color: #f2f2f2;
+	font-size: 12px;
+	font-weight: 500;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 10px;
+	max-width: 140px;
+	text-align: center;
+	cursor: pointer;
+	position: relative;
+	box-sizing: border-box;
+	transition: all 250ms ease;
 }
 
 .page__current {
-    background: #dc3545;
+	background: #dc3545;
 }
 
 .page:hover {
-  background: rgba(0, 0, 0, 0);
-  color: #3a7999;
-  box-shadow: inset 0 0 0 3px #3a7999;
+	background: rgba(0, 0, 0, 0);
+	color: #3a7999;
+	box-shadow: inset 0 0 0 3px #3a7999;
 }
 
 .comments {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    padding: 20px;
-    border-radius: 10px;
-    background: var(--black-color);
+	display: flex;
+	justify-content: space-between;
+	gap: 10px;
+	padding: 20px;
+	border-radius: 10px;
+	background: var(--black-color);
 }
 
 .commentsText {
-    font-weight: 500;
-    font-size: 14px;
-    color: var(--main-blue-color);
+	font-weight: 500;
+	font-size: 14px;
+	color: var(--main-blue-color);
 }
 
 .circle {
-    background: var(--main-bg-color);
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
+	background: var(--main-bg-color);
+	height: 150px;
+	width: 150px;
+	border-radius: 50%;
 }
 
 .login_menu {
-    margin-top: 90px;
-    padding: 20px 10px;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    background: var(--black-color);
-    max-width: 400px;
+	margin-top: 60px;
+	padding: 20px 10px;
+	border-radius: 20px;
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+	background: var(--black-color);
+	max-width: 400px;
 }
 
 .login_menu-top {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
 }
 
 .login_form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    /* max-width: 400px; */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+
+.circle {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 70px;
 }
